--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -14,7 +14,13 @@
   src: url('../fonts/gilroy-light.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+}
 
+@font-face {
+  font-family: 'gilroyregular';
+  src: url('../fonts/gilroy-regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
@@ -33,7 +39,17 @@ h1,h2,h3,h4,h5,h6 {
 
 
 //set default font 
-$default-font: 'Roboto', sans-serif;
+$default-font: 'gilroyregular';
+
+* {
+  font-family: $default-font;
+  overflow-x: hidden;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
 
 
 //theme colors
@@ -41,3 +57,9 @@ $default-font: 'Roboto', sans-serif;
 $primary-color: #1A1B2D;
 $secondary-color: #fff;
 $tetiary-color: #f4f4f4;
+$theme-color: #58BF8E;
+
+//media breakpoints 
+
+$breakpoint-tablet: 993px;
+$breakpoint-phone: 576px;
