--- a/assets/sass/pages/_about.scss
+++ b/assets/sass/pages/_about.scss
@@ -1,5 +1,77 @@
 #about {
 
-  //write inside here only
+  $primary-color: #1A1B2D;
+  $secondary-color: #fff;
+  $tetiary-color: #f4f4f4;
+  $theme-color: #58BF8E;
+  $tertiary-dark: #5E5E66;
+
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.content {
+    margin: auto;
+    align-items: center;
+
+    h4 {
+        font-size: 34px;
+        line-height: 42px;
+        text-align: center;
+        padding: 40px 0;
+    }
+
+    p {
+        font-size: 18px;
+        line-height: 27px;
+        color: $tertiary-dark;
+    }
+
+    .inner-content-1 { 
+        text-align: center;
+        max-width: 879.26px;
+        margin: auto;
+
+        h2 {
+            font-size: 70px;
+            line-height: 84px;
+            color: $primary-color;
+            padding: 50px 0 30px 0;
+        }
+
+        p {
+            padding: 20px 0 40px 0;
+        }
+    }
+
+    .inner-content-2 {
+        background-color: $tetiary-color;
+
+        .inner-content2-txt {
+            max-width: 718px;
+             margin: auto;
+
+             .content-list {
+                 padding: 0 0 80px 0;
+             }
+
+             div {
+                 padding: 40px 0;
+             }
+        }
+
+        h5 {
+            font-size: 26px;
+            line-height: 33px;
+        }
+    }
+}
+
+
+
+
   
 }
