--- a/assets/sass/_config.scss
+++ b/assets/sass/_config.scss
@@ -30,6 +30,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'gilroymedium';
+  src: url('../fonts/gilroy-medium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 //initialise bold font for headings
 
