--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -7,226 +7,13 @@
 @import 'pages/about';
 @import 'pages/contact';
 @import 'pages/faq';
-<<<<<<< HEAD
+@import 'pages/recoverpassword';
+@import 'pages/blogs';
+@import 'pages/index';
 
-$tablet: 700px;
-@mixin tablet {
-    @media (max-width: #{$tablet}) {
-        @content;
-    }
-  }
-
-.header {
-
-    &__container {
-       
-
-    }
-
-    &__content {
-        margin: 4em auto;
-        width: 70%;
-        text-align: center;
-        
-        &--three {
-           text-align: center;
-
-           &__group {
-               display: flex;
-               justify-content: space-between;
-            }
-        }
-    }
-
-    &__title {
-        color: $primary-color;
-        font-weight: 800;
-        font-size: 3em;
-        overflow-y: hidden;
-
-        @include tablet{
-            font-weight: 800;
-            font-size: 2em;
-        }
-    }
-
-    &__title-two {
-        font-weight: 800;
-        font-size: 2em;
-        overflow: hidden;
-    }
-
-    &__title-three {
-        font-size: 1em;
-        overflow: hidden;
-        }
-
-    &__text {
-        font-size: 1em;
-        overflow: hidden;
-    }
-        
-    &__description {
-        color: darken($color: $primary-color, $amount: 30);
-    
-    }
-
-    &__info {
-        color: lighten($color: $primary-color, $amount: 30);
-        font-size: 1em;
-        border-right: 0.01em solid lighten($color: $primary-color, $amount: 70);
-
-        @include tablet {
-            font-size: 0.7em;
-        }
-    }
-
-    &__box {
-        background-image: url("../img/placeholder.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-        padding-top: 65%;
-       
-
-        &__container {
-            max-width: 960px;
-            margin: 0 auto;
-        }
-    }
-
-}
-
-.main-one {
-
-    background-color: #F4F4F4;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    &__container {
-        margin: 4em auto;
-        width: 50%;
-       
-    }
-
-    &__content {
-    
-    }
-
-    &__title {
-        font-weight: 800;
-        font-size: 2em;
-        overflow: hidden;
-
-        @include tablet {
-            font-weight: 800;
-            font-size: 1.4em;
-        }
-
-
-    }
-    
-    &__description {
-        color: lighten($primary-color, 44);
-        font-size: 1em;
-    }
-
-    &__box {
-        background-image: url("../img/placeholder.png");
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-        padding-top: 80%;
-       
-
-        &__container {
-            max-width: 960px;
-            margin: 0 auto;
-
-        }
-    }
-
-}
-
-.main-two {
-
-    background-color: #F4F4F4;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    &__container {
-        margin: 4em auto;
-        width: 50%;
-        text-align: center;
-       
-    }
-
-    &__title {
-        font-weight: 800;
-        font-size: 1.2em;
-        overflow: hidden;
-        text-transform: uppercase;
-
-        @include tablet {
-            font-weight: 800;
-            font-size: 0.9em;
-        }
-    }
-
-    &__list {
-        margin: 0 1em;
-        height: 30vh;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        
-        i {
-            color:lighten($color: $primary-color, $amount: 50)
-        }
-    }
-}
-
-
-.main-three {
-    background-color: $tetiary-color;
-
-    &__content {
-        margin: 3em;
-        padding: 3em;
-        background-color: $secondary-color;
-
-        &__title {
-            font-weight: 800;
-            font-size: 1.2em;
-            overflow: hidden;
-            text-transform: uppercase;
-    
-            @include tablet {
-                font-weight: 300;
-                font-size: 0.9em;
-            }
-        }
-
-        &__description {
-            color: darken($primary-color, 44);
-            font-size: 1em;
-        }
-
-        &__link {
-            color: darken($primary-color, 44);
-            background-color: lighten($primary-color, 80);
-            padding: 0 1em;
-        }
-    }
-
-}
-=======
 @import 'pages/blog_search';
 @import 'pages/signup';
 @import 'pages/recoverpassword';
 
 //dashboard area css
 @import 'dashboard/index';
->>>>>>> c4c33041f0cfa9af4a54c83c248e0532d4597580
